--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "@tailwindcss/postcss": "^4",
     "@types/bcrypt": "^6.0.0",
     "@types/node": "^20",
+    "@types/nookies": "^2.0.3",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
